# openapi-to-axum

./: Cargo.toml  README.md
auth-service/: Cargo.toml
auth-service/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
code-generator/: Cargo.toml
code-generator/src/: lib.rs
code-generator/test/: unit_test.rs
examples/: petstore.yaml  taskmanager.yaml
openapi-parser/: Cargo.toml
openapi-parser/src/: lib.rs
openapi-parser/test/: unit_test.rs
output/: generated.rs
