[workspace]
resolver = "3"
members = ["cli", "code-generator", "openapi-parser"]

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.33"
syn = "2.0.110"
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.17"

