[workspace]
resolver = "3"
members = ["auth-service","cli", "code-generator", "openapi-parser", "auth-service"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
syn = { version= "2.0.110", features = ["full", "visit-mut", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.17"
prettyplease = "0.2"
axum = "0.8.4"
jsonwebtoken = "9.3.1"
tower = "0.5.2"
tower-http = "0.6.6"
chrono = "0.4.42"
async-trait = "0.1.89"