[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }


