[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi-parser = { path = "../openapi-parser" }
code-generator = { path = "../code-generator" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true}